--- a/public/asset/css/index.css
+++ b/public/asset/css/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 *{padding:0;margin:0;box-sizing:border-box;outline:none;}
 body{width:100%;font-family:Open Sans,'Raleway';}
 html{font-family:'Raleway',Open Sans;}
@@ -114,7 +114,7 @@ padding-top:3px;color:#F4511E;padding:0px 35px 20px 35px;}
 .imagesHome ul li .imageOne, .imagesHome ul li .imageTwo, .imagesHome ul li .imageThree, .imagesHome ul li .imageFour{
     width:90%;;background-position:center;background-size:cover;background-repeat:no-repeat;}
 .imageOne, .imageTwo, .imageThree, .imageFour{width:90%;margin:auto;}
-.imageAndNote{margin-top:30px;}
+.imageAndNote{margin-top:30px;margin-bottom:70px;}
 .imagesHome ul li .imageOne, .imagesHome ul li .imageTwo, .imagesHome ul li .imageThree, .imagesHome ul li .imageFour{
     border-radius:20px;text-align:center;padding:30px 30px 0px 30px;}
 .imagesHome ul li:nth-child(3){width:40%;}
@@ -132,3 +132,62 @@ padding-top:3px;color:#F4511E;padding:0px 35px 20px 35px;}
 .noteHome .notes a{position:relative;z-index:2;color:#F4511E;font-weight:600;}
 .noteHome .notes a:hover::before{width:100%;border-radius:13px;}
 .noteHome .notes a:hover{color:#fff;}
+.propertyForm{width:80%;margin:auto;}
+.propertyFormHeaderNote p{font-family:'Inter';font-weight:600;font-size:20px;}
+.propertyFormHeaderNote{text-align:center;}
+.formHome{width:100%;box-shadow:0px 4px 63px rgba(0, 0, 0, 0.15);border-radius:10px;margin-top:30px;padding:30px 45px 50px 45px;margin-bottom:50px;}
+.formHome p{text-align:center;font-family:'Poppins';font-weight:600;color:#F4511E;margin-top:15px;margin-bottom:45px;font-size:20px;}
+.fillForm form{width:100%;}
+.ulOne ul{display:flex;}
+.ulOne ul li{width:33.33%;margin:0 20px;}
+.ulOne ul li input[type="text"], .ulOne ul li input[type="number"]{width:100%;padding:13px 8px;border:1px solid #E6E6E6;
+margin-top:10px;border-radius:5px;background-color:#f9f9f9;font-family:'Inter';}
+.ulOne ul li:first-child{margin-left:0;}
+.ulOne ul li:last-child{margin-right:0;}
+.ulOne ul li label span{color:#F4511E;font-size:20px;font-weight:600;}
+.ulOne ul li label{font-weight:600;}
+.ulTwo{margin-top:30px;}
+.ulTwo ul{display:flex;}
+.ulTwo ul li{width:33.33%;margin:0 20px;}
+.ulTwo ul li select{width:100%;padding:13px 8px;border:1px solid #E6E6E6;position:relative;appearance:none;
+margin-top:10px;border-radius:5px;background-color:#f9f9f9;font-family:'Inter';}
+.ulTwo ul li:first-child{margin-left:0;}
+.ulTwo ul li:last-child{margin-right:0;}
+.ulTwo ul li label span{color:#F4511E;font-size:20px;font-weight:600;}
+.ulTwo ul li label{font-weight:600;}
+.ulThree{margin-top:30px;}
+.ulThree ul{display:flex;}
+.ulThree ul li{width:33.33%;margin:0 20px;}
+.ulThree ul li select,.ulThree ul li input[type="number"]{width:100%;padding:13px 8px;border:1px solid #E6E6E6;position:relative;appearance:none;
+margin-top:10px;border-radius:5px;background-color:#f9f9f9;font-family:'Inter';}
+.ulThree ul li:first-child{margin-left:0;}
+.ulThree ul li:last-child{margin-right:0;}
+.ulThree ul li label span{color:#F4511E;font-size:20px;font-weight:600;}
+.ulThree ul li label{font-weight:600;}
+.descriptionNote{margin-top:30px;}
+.descriptionNote textarea{resize:none;width:100%;padding:13px 8px;border:1px solid #E6E6E6;margin-top:10px;
+    border-radius:5px;background-color:#f9f9f9;font-family:'Inter';}
+.descriptionNote label span{color:#F4511E;font-size:20px;font-weight:600;}
+.descriptionNote label{font-weight:600;}
+.descriptionNote textarea::-webkit-scrollbar{width:10px;}
+.descriptionNote textarea::-webkit-scrollbar-thumb{background:#888;border-radius:10px;}
+.descriptionNote textarea::-webkit-scrollbar-track{background:#f1f1f1;border-radius:10px;}
+.descriptionNote textarea::-webkit-scrollbar-thumb:hover{background: #555}
+.uploadImage{margin-top:30px;}
+.uploadImage textarea{resize:none;width:100%;padding:13px 8px;border:1px solid #E6E6E6;margin-top:10px;
+    border-radius:5px;background-color:#f9f9f9;font-family:'Inter';}
+.uploadImage label span{color:#000;font-size:15px;font-weight:600;padding-bottom:15px;}
+.uploadImage label{font-weight:600;padding:20px;}
+.uploadImage .imageFile{width:100%;border:1px dashed #F4511E;border-radius:10px;}
+.uploadImage .imageFile input[type="file"]{position:relative;font-family:'Inter';text-align:center!important}
+.uploadImage p{text-align:justify;font-family:inherit;font-size:initial;color:#000;margin-bottom:10px;}
+.uploadImage p span{color:#F4511E;font-size:20px;font-weight:600;}
+.drop-container{display:flex;flex-direction:column;justify-content:center;align-items:center;}
+.uploadImage label span span{color:#F4511E;}
+.uploadImage .imageFile input[type=file]::file-selector-button{margin-right:10px;text-align:center!important;position:relative;
+padding:10px 20px;background-color:#F4511E;border:none;border-radius:10px;font-family:'Inter';color:#fff;}
+.drop-container p{font-size:10px;color:rgba(0, 0, 0, 0.5);margin-bottom:0;}
+form .submitBtn{width:100%;text-align:center;margin-top:50px;}
+form .submitBtn button{padding:15px 45px;border-radius:9.07965px;background-color:#F4511E;border:1px solid #F4511E;
+color:#fff;font-family:'Inter';}
+.propertyFormHeaderNote p{margin:15px 0;}
