--- a/public/asset/css/index.css
+++ b/public/asset/css/index.css
@@ -47,7 +47,7 @@ font-family:'DM Sans';line-height:50px;letter-spacing:1px;}
 .mapImage{display:flex;justify-content:center;}
 .allMain{width:85%;margin:auto;}
 .allPropertyList{width:80%;margin:auto;}
-section:nth-child(2){background-color:#F5F5F5;padding:55px 0 60px 0;}
+main section:nth-child(2){background-color:#F5F5F5;padding:55px 0 60px 0;}
 main{margin:60px 0;margin-bottom:0px;}
 .mainHeaderNote p,.allHeaderNote p {text-transform:capitalize;font-size:30px;font-weight:800;font-family:'Inter',sans-serif;letter-spacing:-1px;}
 .mainHeaderNote p span, .allHeaderNote p span{border-bottom:3px solid #F4511E;padding-bottom:5px;}
@@ -181,7 +181,7 @@ margin-top:10px;border-radius:5px;background-color:#f9f9f9;font-family:'Inter';}
     border-radius:5px;background-color:#f9f9f9;font-family:'Inter';}
 .uploadImage label span{color:#000;font-size:15px;font-weight:600;padding-bottom:15px;}
 .uploadImage label{font-weight:600;padding:20px;}
-.uploadImage .imageFile{width:100%;border:1px dashed #F4511E;border-radius:10px;}
+.uploadImage .imageFile{width:100%;border:2px dashed #F4511E;border-radius:10px;}
 .uploadImage .imageFile input[type="file"]{position:relative;font-family:'Inter';text-align:center!important}
 .uploadImage p{text-align:justify;font-family:inherit;font-size:initial;color:#000;margin-bottom:10px;}
 .uploadImage p span{color:#F4511E;font-size:20px;font-weight:600;}
@@ -234,4 +234,16 @@ padding-bottom:65px;}
 .homeAddress p{font-family:'Assistant';}
 .homePhoneNumber ul li{font-family:'Assistant';}
 .homePhoneNumber{margin-bottom:35px;}
-.linkSocialMedia p{font-family:'Assistant';color:#0A142F;opacity:.5;font-size:12px;margin-right:20px;}
+.linkSocialMedia p{font-family:'Assistant';color:#0A142F;opacity:.7;font-size:12px;margin-right:20px;}
+.footerBottom{width:75%;margin:auto;display:flex;align-items:center;justify-content: space-between;border-top:1px solid #7BB9FC;
+padding-top:45px;}
+.homeBottom ul{display:flex;}
+.homeBottom ul li{margin:0 5px;padding:0 5px 5px 5px;text-transform:uppercase;font-family:'Inter';
+font-size:15px;}
+.homeBottom ul li::after{content:"";position:relative;display:block;height:2px;width:0%;background-color:#000;
+transition:width .4s;}
+.homeBottom ul li:hover::after{width:100%;}
+.homeBottom ul li:first-child{margin-left:0;padding-left:0;}
+footer{margin-bottom:60px;}
+.homeCopy p{font-family:'Inter';opacity:.7;font-size:13px;padding-bottom:10px;}
+.homeBottom ul li a{padding:5px 0;}
