--- a/public/asset/css/index.css
+++ b/public/asset/css/index.css
@@ -129,11 +129,11 @@ padding-top:3px;color:#F4511E;padding:0px 35px 20px 35px;}
 .noteHome .notes{width:80%;margin:auto;}
 .noteHome .notes p:first-child{font-weight:800;color:#000;font-family:'Inter';font-size:39px;}
 .noteHome .notes p:nth-child(2){line-height:30px;margin-top:25px;font-family:'Inter';margin-bottom:60px;}
-.noteHome .notes a{padding:15px 20px;border:2px solid #F4511E;;font-family:'Inter';color:#000;border-radius:15px;}
+.noteHome .notes a{padding:15px 20px;border:2px solid #F4511E;;font-family:'Inter';color:#000;}
 .noteHome .notes a::before{content:"";height:52px;width:0%;display:block;position:absolute;top:-1px;left:0;background-color:#F4511E;
-;z-index:-999;transition:all .4s;border-radius:13px}
+;z-index:-999;transition:all .4s;}
 .noteHome .notes a{position:relative;z-index:2;color:#F4511E;font-weight:600;}
-.noteHome .notes a:hover::before{width:100%;border-radius:13px;}
+.noteHome .notes a:hover::before{width:100%;}
 .noteHome .notes a:hover{color:#fff;}
 .propertyForm{width:80%;margin:auto;}
 .propertyFormHeaderNote p{font-family:'Inter';font-weight:600;font-size:20px;}
