--- a/public/asset/css/index.css
+++ b/public/asset/css/index.css
@@ -182,7 +182,7 @@ margin-top:10px;border-radius:5px;background-color:#f9f9f9;font-family:'Inter';}
 .uploadImage label span{color:#000;font-size:15px;font-weight:600;padding-bottom:15px;}
 .uploadImage label{font-weight:600;padding:20px;}
 .uploadImage .imageFile{width:100%;border:2px dashed #F4511E;border-radius:10px;}
-.uploadImage .imageFile input[type="file"]{position:relative;font-family:'Inter';text-align:center!important}
+.uploadImage .imageFile input[type="file"]{position:relative;font-family:'Inter';text-align:center!important;width:100%;}
 .uploadImage p{text-align:justify;font-family:inherit;font-size:initial;color:#000;margin-bottom:10px;}
 .uploadImage p span{color:#F4511E;font-size:20px;font-weight:600;}
 .drop-container{display:flex;flex-direction:column;justify-content:center;align-items:center;}
@@ -198,7 +198,6 @@ color:#fff;font-family:'Inter';}
 .videoHome .loremNote{width:55%;padding-bottom:40px;}
 .videoHome .videoTag{width:45%;}
 .loremNote .pNote p{line-height:40px;padding-top:30px;padding-right:30px;font-family:'Inter';}
-/* .videoHome .loremNote{background-color:rgba(244,81,30,0.07);;} */
 .videoTag video{width:100%;height:100%;}
 .loremNote .picImage{display:flex;align-items:center;margin-top:20px;}
 .videoAndNote{width:92%;display:flex;margin-left:auto;align-items:center;}
@@ -221,7 +220,6 @@ padding-bottom:65px;}
 .homeFooter .footerHomeImage{background-color:#E6E6E6;text-align:center;}
 .homeFooter .footerHomeImage img{width:80%;}
 .homePhoneNumber ul{display:flex;}
-/* .homeAddress p i{} */
 .homePhoneNumber ul li i, .homeAddress p i{color:#F4511E;font-size:18px;}
 .homeAddress p i, .homePhoneNumber ul li i{margin-right:10px;}
 .homePhoneNumber ul li:first-child{margin-right:60px;}
