--- a/public/asset/css/responsive-index.css
+++ b/public/asset/css/responsive-index.css
@@ -9,7 +9,7 @@
     .homeLink{background-color:rgba(95, 93, 93, 50%);position:relative;z-index:999;}
     .navbarHome .navbarListHome{width:100%;margin-top:-99px;padding-top:90px;}
     .navbarListHome ul{display:block;background-color:rgba(95, 93, 93);width:50%;height:100vh;padding-top:90px;
-    padding-left:20px;float:right;position:fixed;right:0;top:0;margin-top:0px;}
+    padding-left:20px;float:right;position:fixed;right:0;top:0;margin-top:0px;z-index:998;}
     .navbarListHome ul{right:999px;}
     .navbarListHome{height:100vh;}
     .navbarListHome ul li::after{margin-top:3px;}
@@ -18,8 +18,8 @@
     .homeLink.fixed{position:fixed;top:0;}
     header .backgroundHome{display:block;}
     .backgroundHome .backgroundText{width:100%;}
-    .backgroundText p{font-size:25px;line-height:40px;text-align:center;}
-    .backgroundHome .backgroundMapImage{width:100%;margin-top:40px;}
+    .backgroundText p{font-size:20px;line-height:25px;text-align:center;}
+    .backgroundHome .backgroundMapImage{width:100%;;}
     header .backgroundHome{width:95%;}
     .mapImage img{width:100%;}
     .imageMap{width:95%;}
@@ -35,7 +35,7 @@
     .mainHeaderNote p{line-height:45px;font-size:25px;}
     .mainImage{display:block;}
     .mainImageHome, .mainIcon{width:100%;}
-    .allMain.marginTop{position:relative;top:675px;z-index:-999;}
+    .allMain.marginTop{position:relative;top:0px;z-index:-999;margin-top:850px;}
     .allMain{width:100%;padding:0px 25px;}
     .mainImageHome{margin-left:0px;text-align:center;}
     .mainImageHome img{width:100%;height:400px;}
@@ -46,6 +46,48 @@
     font-size:18px;}
     .iconListOne ul li .dollarNote p br{display:none;}
     /* .mainImageHome, .iconListOne ul:nth-child(1){float:left;} */
+    .mainPropertyImage ul{flex-direction:column;margin:0;}
+    .mainPropertyImage ul li{width:75%;margin:15px auto;}
+    .allPropertyList{width:100%;padding:0 25px;}
+    .mainPropertyImage ul li:last-child{margin-right:auto;}
+    .mainPropertyImage ul li:first-child{margin-left:auto;}
+    .imageAndNote{width:100%;padding:0 25px;flex-direction:column;margin-top:60px;}
+    .imagesHome, .noteHome{width:100%;}
+    .noteHome .notes{width:95%;}
+    .noteHome{margin-top:40px;}
+    .noteHome .notes p:first-child{font-size:33px;line-height:47px;}
+    .propertyForm{width:100%;padding:0 25px;}
+    .propertyFormHeaderNote p{padding:0 20px;}
+    .ulOne ul,.ulTwo ul,.ulThree ul{flex-direction:column;}
+    .ulOne ul li,.ulTwo ul li,.ulThree ul li{width:100%;margin:0 0 15px 0;}
+    .ulTwo,.uploadImage,.uploadImage p,.ulThree,.descriptionNote{margin-top:0;}
+    .ulThree ul li:last-child{display:none;}
+    .descriptionNote{margin:0 0 15px 0;}
+    .videoAndNote{width:100%;padding:50px 25px 0 25px;flex-direction:column-reverse;}
+    .videoHome .videoTag{width:100%;}
+    .videoHome .loremNote{width:100%;}
+    .loremNote .pNote{margin-top:30px;}
+    .homeFooter{width:100%;padding:0 25px;flex-direction:column;}
+    .homeFooter .footerHomeImage, .homeFooter .homeSocialMedia{width:100%;}
+    .homeFooter .footerHomeImage{margin-top:30px;}
+    .homeFooter .homeSocialMedia{padding-left:0;display:flex;align-items:center;flex-direction:column;margin-top:30px;margin-bottom:30px;}
+    .linkSocialMedia p{font-size:13px;opacity:.85;margin-right:0;}
+    .footerBottom{width:100%;padding:0 25px;flex-direction:column;}
+    .homeBottom{margin-top:30px;}
+    .homeCopy{margin-top:30px;}
+    .homeCopy p{font-size:19px;text-align:center;}
+    .allHeaderNote p{font-size:20px;}
+    .allHeaderNote a{padding:10px 20px;}
+    .mainPropertyImage ul li figure figcaption p:nth-child(1){padding:8px 25px;}
+    .mainPropertyImage ul li figure figcaption p:nth-child(2){padding:0 25px 8px 25px;}
+    .imagesHome ul li .imageOne{height:220px;}
+    .imagesHome ul li .imageTwo{height:170px;}
+    .imagesHome ul li .imageThree{height:180px;}
+    .imagesHome ul li .imageFour{height:226px;}
+    .imagesHome ul li:nth-child(2){margin-top:50px;}
+    .formHome{padding:30px 20px 50px;}
+    .drop-container p{margin-top:10px;text-align:center;}
+    .uploadImage label span{text-align:center;}
 }
 
 
@@ -54,11 +96,62 @@
 
 @media screen and (min-width:400px) and (max-width:768px) {
     .mapImage img{width:100%;height:280px;}
-    .backgroundText p br:nth-child(1){display:none}
+    /* .backgroundText p br:nth-child(1){display:none} */
+    .homePhoneNumber ul{align-items:center;justify-content:space-between;}
+    .homePhoneNumber{width:100%;}
+    .homePhoneNumber ul li:first-child{margin-right:0;}
+    header .backgroundHome{margin-top:100px;}
+    .backgroundHome .backgroundMapImage{margin-top:85px;}
+    .backgroundText p{font-size:35px;line-height:55px;padding:0 15px;}
+    .allMain.marginTop{margin-top:1000px;}
 }
 @media screen and (min-width:767px) and (max-width:1000px) {
     .mapImage img{width:100%;}
     .mapForm{display:block;}
     .mapForm select, .mapForm button{width:100%;margin:8px 0;}
     .mapForm select:nth-child(2){width:100%;}
+}
+@media screen and (max-width:399px){
+    .homeBottom ul{flex-direction:column;}
+    .homeBottom ul li:first-child{padding-left:5px;}
+    .homeBottom ul li{margin:5px 0;}
+    .footerBottom{align-items:start;}
+    .linkSocialMedia{flex-direction:column;}
+    .linkSocialMedia p{margin-right:0;margin-bottom:8px;font-size:17px;}
+    .homeCopy{border-top:2px solid #F4511E;padding-top:15px;}
+    .homeCopy p{font-size:13px;}
+    .formHome{padding:30px 20px 45px 20px;}
+    .uploadImage .imageFile input[type=file]::file-selector-button{margin-left:10px;}
+    .mainPropertyImage ul li{width:95%;}
+    .mainPropertyImage ul li figure figcaption p:nth-child(1){padding:5px 35px;}
+    .mainPropertyImage ul li figure figcaption p:nth-child(2){padding:0 35px 8px 35px;}
+    .allHeaderNote a{padding:8.5px 12.5px;}
+    .allHeaderNote p{font-size:20px;}
+    .allHeaderNote p span{padding-bottom:2.5px;}
+    .imagesHome ul li .imageOne{height:200px;}
+    .imagesHome ul li .imageTwo{height:150px;}
+    .imagesHome ul li:nth-child(2){margin-top:50px;}
+    .imagesHome ul li .imageThree{height:160px;}
+    .imagesHome ul li .imageFour{height:206px;}
+    .imagesHome ul li .imageOne, .imagesHome ul li .imageTwo, .imagesHome ul li .imageThree, .imagesHome ul li .imageFour{
+    padding:20px 10px 0;}
+    .homePhoneNumber ul li:first-child{margin-right:0;}
+    .homePhoneNumber ul li i{margin-right:3px;}
+    .homePhoneNumber{width:100%;margin-bottom:20px}
+    .homePhoneNumber ul{justify-content:space-between;}
+    .uploadImage label{padding:20px 10px;}
+    form .submitBtn button{padding:15px 20px;}
+    .clickPages ul li a{padding:10px;}
+    .clickPages ul li{padding:10px 0;}
+}
+@media screen and (max-width:280px){
+    .backgroundHome .backgroundMapImage{margin-top:70px;}
+    .backgroundHome .backgroundText{margin-top:40px;}
+    main{margin-top:120px;}
+    .allMain.marginTop{margin-top:750px;}
+    .homeAddress p{font-size:13px;}
+    .homeAddress p i, .homePhoneNumber ul li i{margin-right:4px;font-size:10px;}
+    .homePhoneNumber ul li{font-size:12px;}
+    .linkSocialMedia ul li a i{font-size:13px;}
+    .linkSocialMedia p{font-size:13px;}
 }
