--- a/public/asset/css/index.css
+++ b/public/asset/css/index.css
@@ -245,3 +245,12 @@ transition:width .4s;}
 footer{margin-bottom:60px;}
 .homeCopy p{font-family:'Inter';opacity:.7;font-size:13px;padding-bottom:10px;}
 .homeBottom ul li a{padding:5px 0;}
+.imagesHome ul li .imageOne:hover,.imagesHome ul li .imageTwo:hover,
+.imagesHome ul li .imageThree:hover,.imagesHome ul li .imageFour:hover{padding:30px 0px 0px;}
+.imagesHome ul li .imageOne:hover p,.imagesHome ul li .imageTwo:hover p,
+.imagesHome ul li .imageThree:hover p,.imagesHome ul li .imageFour:hover p{animation:ski .5s forwards ease-in-out;position:relative;}
+
+@keyframes ski{
+    0%{top:0;font-size:initial;}
+    100%{top:40%;font-size:23px;}    
+}
